fix width of profile module if profile text is too short

--- a/illustfolio3/sass/core/_core.scss
+++ b/illustfolio3/sass/core/_core.scss
@@ -260,6 +260,7 @@
         background-size: cover;
         background-position: center;
         padding-right: 2em;
+        width: 128px;
 
         img {
             border-radius: 128px;
