--- a/illustfolio3/sass/core/_media-queries.scss
+++ b/illustfolio3/sass/core/_media-queries.scss
@@ -131,6 +131,7 @@ body {
     .profile-image {
         display: block;
         padding: 0 0 1em 0;
+        width: 100%;
     }
 
     .profile-content {
